# snake-rl

./: .gitignore  .pre-commit-config.yaml  INSTALL.md  LICENSE  README.md  demo.py  demo_engine.py  evaluate.py  pyproject.toml  repo_init.sh  setup_env.py  test_basic_env.py  test_complete_pipeline.py  test_env_runner.py  test_models.py  test_runner.py  train_and_visualize.py  train_dqn.py  train_simple.py
.github/workflows/: ci.yml
snake_rl/algos/: dqn.py  grpo.py  mcts.py
snake_rl/algos/models/: cnn_encoder.py
snake_rl/conf/: config.yaml
snake_rl/conf/agent/: dqn.yaml  dqn_dueling.yaml
snake_rl/sim/: engine.py  renderer.py
snake_rl/tests/: test_engine.py  test_env.py  test_grpo.py
